@@ -1,13 +1,16 @@
 *.tar.gz
-Makefile
-Makefile.old
-META.yml
-META.json
-MYMETA.yml
-MYMETA.json
-MANIFEST
+.build
+.DS_Store
 blib/
 inc/
-README
+Makefile
+Makefile.old
+Makefile.old
+MANIFEST
+META.json
+META.yml
+MYMETA.json
+MYMETA.yml
 pm_to_blib
-/.build
+README
+Catalyst-Controller-HTML-FormFu-*
