@@ -1,269 +1,12 @@
-package Catalyst::Controller::HTML::FormFu;
-
-use strict;
-
-# VERSION
-
-use Moose;
-
-use HTML::FormFu;
-use Config::Any;
-use Regexp::Assemble;
-use Scalar::Util qw/ isweak weaken /;
-use Carp qw/ croak /;
-
-use namespace::autoclean;
-
-# see https://rt.cpan.org/Ticket/Display.html?id=55780
-BEGIN {
-    extends 'Catalyst::Controller';
-}
-
-with 'Catalyst::Component::InstancePerContext';
-
-has _html_formfu_config => ( is => 'rw' );
-
-sub build_per_context_instance {
-    my ( $self, $c ) = @_;
-    return $self unless(ref $c);
-    $self->{c} = $c;
-    
-    weaken( $self->{c} )
-        if !isweak( $self->{c} );
-
-    return $self;
-}
-
-sub BUILD {}
-
-after BUILD => sub {
-    my ( $self ) = @_;
-
-    my $app = $self->_app;
-    my $self_config   = $self->config->{'Controller::HTML::FormFu'} || {};
-    my $parent_config = $app->config->{'Controller::HTML::FormFu'}  || {};
-
-    my %defaults = (
-        request_token_enable          => 0,
-        request_token_field_name      => '_token',
-        request_token_session_key     => '__token',
-        request_token_expiration_time => 3600,
-        form_method                   => 'form',
-        form_stash                    => 'form',
-        form_attr                     => 'Form',
-        config_attr                   => 'FormConfig',
-        method_attr                   => 'FormMethod',
-        form_action => "Catalyst::Controller::HTML::FormFu::Action::Form",
-        config_action =>
-            "Catalyst::Controller::HTML::FormFu::Action::FormConfig",
-        method_action =>
-            "Catalyst::Controller::HTML::FormFu::Action::FormMethod",
-
-        multiform_method      => 'multiform',
-        multiform_stash       => 'multiform',
-        multiform_attr        => 'MultiForm',
-        multiform_config_attr => 'MultiFormConfig',
-        multiform_method_attr => 'MultiFormMethod',
-        multiform_action =>
-            "Catalyst::Controller::HTML::FormFu::Action::MultiForm",
-        multiform_config_action =>
-            "Catalyst::Controller::HTML::FormFu::Action::MultiFormConfig",
-        multiform_method_action =>
-            "Catalyst::Controller::HTML::FormFu::Action::MultiFormMethod",
-
-        context_stash => 'context',
-
-        model_stash => {},
-
-        constructor           => {},
-        multiform_constructor => {},
-
-        config_callback => 1,
-    );
-
-    my %args = ( %defaults, %$parent_config, %$self_config );
-
-    my $local_path = $app->path_to( 'root', 'formfu' );
-
-    if (   !exists $args{constructor}{tt_args}
-        || !exists $args{constructor}{tt_args}{INCLUDE_PATH} && -d $local_path )
-    {
-        $args{constructor}{tt_args}{INCLUDE_PATH} = [$local_path];
-    }
-
-    $args{constructor}{query_type} ||= 'Catalyst';
-
-    if ( !exists $args{constructor}{config_file_path} ) {
-        $args{constructor}{config_file_path} = $app->path_to( 'root', 'forms' );
-    }
-
-    # build regexp of file extensions
-    my $regex_builder = Regexp::Assemble->new;
-
-    map { $regex_builder->add($_) } Config::Any->extensions;
-
-    $args{_file_ext_regex} = $regex_builder->re;
-
-    # save config for use by action classes
-    $self->_html_formfu_config( \%args );
-
-    # add controller methods
-    no strict 'refs';
-    *{"$args{form_method}"}      = \&_form;
-    *{"$args{multiform_method}"} = \&_multiform;
-};
-
-sub _form {
-    my $self   = shift;
-    my $config = $self->_html_formfu_config;
-    my $form   = HTML::FormFu->new( {
-            %{ $self->_html_formfu_config->{constructor} },
-            ( @_ ? %{ $_[0] } : () ),
-        } );
-
-    $self->_common_construction($form);
-
-    if ( $config->{request_token_enable} ) {
-        $form->plugins( {
-                type            => 'RequestToken',
-                context         => $config->{context_stash},
-                field_name      => $config->{request_token_field_name},
-                session_key     => $config->{request_token_session_key},
-                expiration_time => $config->{request_token_expiration_time} } );
-    }
-
-    return $form;
-}
-
-sub _multiform {
-    my $self = shift;
-
-    require HTML::FormFu::MultiForm;
-
-    my $multi = HTML::FormFu::MultiForm->new( {
-            %{ $self->_html_formfu_config->{constructor} },
-            %{ $self->_html_formfu_config->{multiform_constructor} },
-            ( @_ ? %{ $_[0] } : () ),
-        } );
-
-    $self->_common_construction($multi);
-
-    return $multi;
-}
-
-sub _common_construction {
-    my ( $self, $form ) = @_;
-
-    croak "form or multi arg required" if !defined $form;
-
-    $form->query( $self->{c}->request );
-
-    my $config = $self->_html_formfu_config;
-
-    if ( $config->{config_callback} ) {
-        $form->config_callback( {
-                plain_value => sub {
-                    return if !defined $_;
-                    s{__uri_for\((.+?)\)__}
-                     { $self->{c}->uri_for( split( '\s*,\s*', $1 ) ) }eg
-                        if /__uri_for\(/;
-                    
-                    s{__path_to\(\s*(.+?)\s*\)__}
-                     { $self->{c}->path_to( split( '\s*,\s*', $1 ) ) }eg
-                        if /__path_to\(/;
-                    
-                    s{__config\((.+?)\)__}
-                     { $self->{c}->config->{$1}  }eg
-                        if /__config\(/;
-                    }
-            } );
-
-        weaken( $self->{c} )
-            if !isweak( $self->{c} );
-    }
-
-    if ( $config->{languages_from_context} ) {
-        $form->languages( $self->{c}->languages );
-    }
-
-    if ( $config->{localize_from_context} ) {
-        $form->add_localize_object( $self->{c} );
-    }
-
-    if ( $config->{default_action_use_name} ) {
-        my $action = $self->{c}->uri_for( $self->{c}->{action}->name );
-
-        $self->{c}
-            ->log->debug( "FormFu - Setting default action by name: $action" )
-            if $self->{c}->debug;
-
-        $form->action($action);
-    }
-    elsif ( $config->{default_action_use_path} ) {
-        my $action = $self->{c}->{request}->base . $self->{c}->{request}->path;
-
-        $self->{c}
-            ->log->debug( "FormFu - Setting default action by path: $action" )
-            if $self->{c}->debug;
-
-        $form->action($action);
-    }
-
-    my $context_stash = $config->{context_stash};
-    $form->stash->{$context_stash} = $self->{c};
-    weaken( $form->stash->{$context_stash} );
-
-    my $model_stash = $config->{model_stash};
-
-    for my $model ( keys %$model_stash ) {
-        $form->stash->{$model} = $self->{c}->model( $model_stash->{$model} );
-    }
-
-    return;
-}
-
-sub create_action {
-    my $self = shift;
-    my %args = @_;
-
-    my $config = $self->_html_formfu_config;
-
-    for my $type (
-        qw/
-        form
-        config
-        method
-        multiform
-        multiform_config
-        multiform_method /
-        )
-    {
-        my $attr = $config->{"${type}_attr"};
-
-        if ( exists $args{attributes}{$attr} ) {
-            $args{_attr_params} = delete $args{attributes}{$attr};
-        }
-        elsif ( exists $args{attributes}{"$attr()"} ) {
-            $args{_attr_params} = delete $args{attributes}{"$attr()"};
-        }
-        else {
-            next;
-        }
-
-        push @{ $args{attributes}{ActionClass} }, $config->{"${type}_action"};
-        last;
-    }
-
-    $self->SUPER::create_action(%args);
-}
-
-1;
-
-__END__
+=pod
 
 =head1 NAME
 
 Catalyst::Controller::HTML::FormFu - Catalyst integration for HTML::FormFu
+
+=head1 VERSION
+
+version 1.00_01
 
 =head1 SYNOPSIS
 
