@@ -2,9 +2,9 @@ name    = Catalyst-Controller-HTML-FormFu
 author  = Carl Franks <cpan@fireartist.com>
 license = Perl_5
 copyright_holder = Carl Franks
-copyright_year   = 2013
+copyright_year   = 2016
 
-version = 1.00
+version = 1.00_01
 
 [Prereqs]
 Catalyst::Runtime = 5.71001
@@ -31,11 +31,39 @@ Test::WWW::Mechanize::Catalyst = 0
 Test::WWW::Mechanize = 1.16 ; post_ok came in 1.16
 Test::More = 0.92 ; done_testing
 
-[PkgVersion]
+[MetaNoIndex]
+directory = examples
+directory = t
+directory = t-aggregate
+directory = xt
+
+[Test::Perl::Critic]
+[MetaJSON]
+[MetaTests]
+;; [PodCoverageTests]           ; Currently we comprehensively fail these
+[PodSyntaxTests]
+[OurPkgVersion]
+[PodVersion]
+[Test::Kwalitee]
+[Test::EOL]
+
+[Git::CheckFor::CorrectBranch] ; ensure on master branch
+; [Git::Check]        ; ensure all files checked in
+[Git::Remote::Check]
+
+[Repository]
+
+[UploadToCPAN]      ; uploads to CPAN
+
+[Git::Tag]
 
 [NextRelease]
 format = %v %{yyyy-MM-dd}d
 
-[Repository]
+; This keeps github happier by putting a README.pod into the repo
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = pod
+filename = README.pod
+location = root
 
 [@Basic]
