@@ -1,4 +1,9 @@
 package HTML::FormFu::Constraint::RequestToken;
+
+use strict;
+
+# VERSION
+
 use Moose;
 
 extends 'HTML::FormFu::Constraint';
